adding javascript and finish

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Sticky Navigation</title>
 </head>
 <body>
-    <!-- <nav class="nav">
+    <nav class="nav">
         <div class="container">
             <h1 class="logo"><a href="/index.html">My Website</a></h1>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#" class="active">About</a></li>
-                <li><a href="#" class="active">Services</a></li>
-                <li><a href="#" class="active">Contact</a></li>
+                <li><a href="#" class="current">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
-    </nav> -->
+    </nav>
+
+
     <div class="hero">
         <div class="container">
             <h1>Welcome To My Website</h1>
@@ -27,10 +29,10 @@
 
     <section class="container contetnt">
         <h2>Content One</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nesciunt est tempora aliquid quo nostrum et! Tenetur saepe maiores quidem magnam minima eos hic ullam nulla atque eligendi. Voluptate numquam tempora debitis cum voluptatum error distinctio quia consequatur esse, nulla quas nemo sunt, vel quisquam soluta. Deserunt reiciendis, inventore in obcaecati expedita id maxime, molestiae tempore earum natus similique. Laborum asperiores maxime consectetur cum ipsa id quaerat. Facilis nulla dolor cumque nam ad! Quasi aperiam neque recusandae, quod, excepturi aspernatur enim voluptatem perferendis quidem suscipit eveniet velit. Hic amet earum expedita. Nobis, itaque. In pariatur saepe eius, odit id nulla.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore nesciunt est tempora aliquid quo nostrum et! Tenetur saepe maiores quidem magnam minima eos hic ullam nulla atque eligendi. Voluptate numquam tempora debitis cum voluptatum error distinctio quia consequatur esse, nulla quas nemo sunt, vel quisquam soluta. Deserunt reiciendis, inventore in obcaecati expedita id maxime, molestiae tempore earum natus similique. Laborum asperiores maxime consectetur cum ipsa id quaerat. Facilis nulla dolor cumque nam ad! Quasi aperiam neque recusandae, quod, excepturi aspernatur enim voluptatem perferendis quidem suscipit eveniet velit. Hic amet earum expedita. Nobis, itaque. In pariatur saepe eius, odit id nulla. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores possimus quod illo atque recusandae quia veniam esse beatae, dolorum, asperiores aliquam quidem, at iure doloribus pariatur sed. Repellendus quam corrupti omnis eligendi temporibus sed soluta quibusdam, a amet eum repudiandae ducimus beatae! Consectetur debitis molestiae sunt ex, quia a delectus quasi exercitationem praesentium et corrupti ipsum mollitia dolor accusamus at voluptates ipsam placeat eaque modi dignissimos, odit reprehenderit, amet aut officiis? Quia veritatis praesentium quasi totam, dolorum cum consequuntur itaque quae eius rem architecto tempore sequi adipisci. Impedit, ab tenetur? Vero ipsum laborum rem soluta vel nulla eligendi quibusdam sed dolore, quae error, explicabo ea pariatur a officiis! Obcaecati aliquam sapiente quod eius consequatur vero sunt rem exercitationem ab, sed molestias quae cumque! Necessitatibus dicta consequatur, facilis libero non quod in sapiente soluta adipisci error aspernatur officia itaque obcaecati harum distinctio saepe sunt aliquid animi cupiditate voluptas. Corporis nemo eligendi dolor tempora eos beatae itaque? Aliquam consequuntur facere neque perspiciatis rem, architecto recusandae obcaecati doloremque placeat ad, sint possimus labore, error ipsa. Id velit tempore voluptatibus perspiciatis. Qui dolore officia doloribus deserunt, earum dolorum vel nesciunt, placeat ut explicabo dolor dolores nobis blanditiis cupiditate, voluptates suscipit illum laborum accusantium fugiat!</p>
 
         <h3>Contetnt Two</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In velit eum vero iusto inventore excepturi debitis amet ut ratione beatae omnis natus nesciunt blanditiis itaque molestias error saepe sed, distinctio hic, fugiat delectus vitae officiis facilis. Fugit, hic corporis eveniet tempore consectetur impedit aperiam pariatur, asperiores laborum tenetur doloribus quibusdam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In velit eum vero iusto inventore excepturi debitis amet ut ratione beatae omnis natus nesciunt blanditiis itaque molestias error saepe sed, distinctio hic, fugiat delectus vitae officiis facilis. Fugit, hic corporis eveniet tempore consectetur impedit aperiam pariatur, asperiores laborum tenetur doloribus quibusdam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aperiam in est quos doloremque mollitia iste accusantium repellendus laboriosam esse dolores nulla quis rerum soluta ab dicta quam autem ipsam, facere voluptas ad placeat! Commodi a suscipit hic nihil eaque ipsa aliquam asperiores dolor! Magni voluptas quaerat repellendus iure odio enim, aut, consectetur inventore excepturi ipsa, molestias facilis laborum harum quod rerum? Tempore eligendi voluptas facilis omnis quod nobis commodi qui ipsa maiores sunt ratione voluptatibus veniam earum, eaque cumque delectus harum voluptatum ex quo minima eveniet sed temporibus laudantium. Vero fugiat at optio quae facere eaque vel fuga hic. </p>
     </section>
 
     <script src="script.js"></script>
